exports[`name-replacements > invalid(1): .btn {} 1`] = `

  1 | .btn {}

`;

exports[`name-replacements > invalid(1): .btn {} 2`] = `

Message:
> 1 | .btn {}
    | ^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(1): a { animation-name: btn; } 1`] = `

  1 | a { animation-name: btn; }

`;

exports[`name-replacements > invalid(1): a { animation-name: btn; } 2`] = `

Message:
> 1 | a { animation-name: btn; }
    |                     ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(1): btn: 1\nnested: {err: 2}\n\"b\\u0074n-group\": 3 1`] = `

Options:
- checkProperties: true

Code:
  1 | btn: 1
  2 | nested: {err: 2}
  3 | "b\\u0074n-group": 3

`;

exports[`name-replacements > invalid(1): btn: 1\nnested: {err: 2}\n\"b\\u0074n-group\": 3 2`] = `

Message:
> 1 | btn: 1
    | ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.
  2 | nested: {err: 2}
  3 | "b\\u0074n-group": 3

`;

exports[`name-replacements > invalid(1): btn: 1\nnested: {err: 2}\n\"b\\u0074n-group\": 3 3`] = `

Message:
  1 | btn: 1
> 2 | nested: {err: 2}
    |          ^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.
  3 | "b\\u0074n-group": 3

`;

exports[`name-replacements > invalid(1): btn: 1\nnested: {err: 2}\n\"b\\u0074n-group\": 3 4`] = `

Message:
  1 | btn: 1
  2 | nested: {err: 2}
> 3 | "b\\u0074n-group": 3
    | ^^^^^^^^^^^^^^^^ The identifier \`btn-group\` should be named \`button-group\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(1): {\"btn\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"btn": 1}

`;

exports[`name-replacements > invalid(1): {\"btn\": 1} 2`] = `

Message:
> 1 | {"btn": 1}
    |  ^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(1): {btn: 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {btn: 1}

`;

exports[`name-replacements > invalid(1): {btn: 1} 2`] = `

Message:
> 1 | {btn: 1}
    |  ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(1): {} 1`] = `

Filename: btn.json

  1 | {}

`;

exports[`name-replacements > invalid(1): {} 2`] = `

Message:
> 1 | {}
    | ^^ The filename \`btn.json\` should be named \`button.json\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): #btn-group {} 1`] = `

  1 | #btn-group {}

`;

exports[`name-replacements > invalid(2): #btn-group {} 2`] = `

Message:
> 1 | #btn-group {}
    | ^^^^^^^^^^ The identifier \`btn-group\` should be named \`button-group\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): [btn.\"err-group\"]\n\"b\\u0074n\".args = \"btn\" 1`] = `

Options:
- checkProperties: true

Code:
  1 | [btn."err-group"]
  2 | "b\\u0074n".args = "btn"

`;

exports[`name-replacements > invalid(2): [btn.\"err-group\"]\n\"b\\u0074n\".args = \"btn\" 2`] = `

Message:
> 1 | [btn."err-group"]
    |  ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.
  2 | "b\\u0074n".args = "btn"

`;

exports[`name-replacements > invalid(2): [btn.\"err-group\"]\n\"b\\u0074n\".args = \"btn\" 3`] = `

Message:
> 1 | [btn."err-group"]
    |      ^^^^^^^^^^^ The identifier \`err-group\` should be named \`error-group\`. A more descriptive name will do too.
  2 | "b\\u0074n".args = "btn"

`;

exports[`name-replacements > invalid(2): [btn.\"err-group\"]\n\"b\\u0074n\".args = \"btn\" 4`] = `

Message:
  1 | [btn."err-group"]
> 2 | "b\\u0074n".args = "btn"
    | ^^^^^^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): [btn.\"err-group\"]\n\"b\\u0074n\".args = \"btn\" 5`] = `

Message:
  1 | [btn."err-group"]
> 2 | "b\\u0074n".args = "btn"
    |            ^^^^ The identifier \`args\` should be named \`arguments\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): a { animation-name: btn, \"err\"; } 1`] = `

  1 | a { animation-name: btn, "err"; }

`;

exports[`name-replacements > invalid(2): a { animation-name: btn, \"err\"; } 2`] = `

Message:
> 1 | a { animation-name: btn, "err"; }
    |                     ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): a { animation-name: btn, \"err\"; } 3`] = `

Message:
> 1 | a { animation-name: btn, "err"; }
    |                          ^^^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): a {} 1`] = `

Filename: btn.css

  1 | a {}

`;

exports[`name-replacements > invalid(2): a {} 2`] = `

Message:
> 1 | a {}
    | ^^^^ The filename \`btn.css\` should be named \`button.css\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): {\"btn-group\": {\"err\": 1}} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"btn-group": {"err": 1}}

`;

exports[`name-replacements > invalid(2): {\"btn-group\": {\"err\": 1}} 2`] = `

Message:
> 1 | {"btn-group": {"err": 1}}
    |  ^^^^^^^^^^^ The identifier \`btn-group\` should be named \`button-group\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(2): {\"btn-group\": {\"err\": 1}} 3`] = `

Message:
> 1 | {"btn-group": {"err": 1}}
    |                ^^^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(3): .widget {} 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    widget:
      component: true

Code:
  1 | .widget {}

`;

exports[`name-replacements > invalid(3): .widget {} 2`] = `

Message:
> 1 | .widget {}
    | ^^^^^^^ The identifier \`widget\` should be named \`component\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(3): [[btn]]\nvalue = {err = 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | [[btn]]
  2 | value = {err = 1}

`;

exports[`name-replacements > invalid(3): [[btn]]\nvalue = {err = 1} 2`] = `

Message:
> 1 | [[btn]]
    |   ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.
  2 | value = {err = 1}

`;

exports[`name-replacements > invalid(3): [[btn]]\nvalue = {err = 1} 3`] = `

Message:
  1 | [[btn]]
> 2 | value = {err = 1}
    |          ^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(3): a { --btn: var(--err); } 1`] = `

  1 | a { --btn: var(--err); }

`;

exports[`name-replacements > invalid(3): a { --btn: var(--err); } 2`] = `

Message:
> 1 | a { --btn: var(--err); }
    |     ^^^^^ The identifier \`--btn\` should be named \`--button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(3): a { --btn: var(--err); } 3`] = `

Message:
> 1 | a { --btn: var(--err); }
    |                ^^^^^ The identifier \`--err\` should be named \`--error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(3): a { animation-name: b\\74 n; } 1`] = `

  1 | a { animation-name: b\\74 n; }

`;

exports[`name-replacements > invalid(3): a { animation-name: b\\74 n; } 2`] = `

Message:
> 1 | a { animation-name: b\\74 n; }
    |                     ^^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(3): {\"b\\u0074n\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"b\\u0074n": 1}

`;

exports[`name-replacements > invalid(3): {\"b\\u0074n\": 1} 2`] = `

Message:
> 1 | {"b\\u0074n": 1}
    |  ^^^^^^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(4): <div id=\"btn\" class=\"good err-group\targs\"></div> 1`] = `

  1 | <div id="btn" class="good err-group	args"></div>

`;

exports[`name-replacements > invalid(4): <div id=\"btn\" class=\"good err-group\targs\"></div> 2`] = `

Message:
> 1 | <div id="btn" class="good err-group	args"></div>
    |          ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(4): <div id=\"btn\" class=\"good err-group\targs\"></div> 3`] = `

Message:
> 1 | <div id="btn" class="good err-group	args"></div>
    |                           ^^^^^^^^^ The identifier \`err-group\` should be named \`error-group\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(4): <div id=\"btn\" class=\"good err-group\targs\"></div> 4`] = `

Message:
> 1 | <div id="btn" class="good err-group	args"></div>
    |                                    	^^^^ The identifier \`args\` should be named \`arguments\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(4): @keyframes btn {} 1`] = `

  1 | @keyframes btn {}

`;

exports[`name-replacements > invalid(4): @keyframes btn {} 2`] = `

Message:
> 1 | @keyframes btn {}
    |            ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(4): a { -webkit-animation-name: \"btn\"; } 1`] = `

  1 | a { -webkit-animation-name: "btn"; }

`;

exports[`name-replacements > invalid(4): a { -webkit-animation-name: \"btn\"; } 2`] = `

Message:
> 1 | a { -webkit-animation-name: "btn"; }
    |                             ^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(4): {\"btn\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"btn": 1}

`;

exports[`name-replacements > invalid(4): {\"btn\": 1} 2`] = `

Message:
> 1 | {"btn": 1}
    |  ^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(5): <div ID=btn CLASS=\"b&#116;n&#32;err\"></div> 1`] = `

  1 | <div ID=btn CLASS="b&#116;n&#32;err"></div>

`;

exports[`name-replacements > invalid(5): <div ID=btn CLASS=\"b&#116;n&#32;err\"></div> 2`] = `

Message:
> 1 | <div ID=btn CLASS="b&#116;n&#32;err"></div>
    |         ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(5): <div ID=btn CLASS=\"b&#116;n&#32;err\"></div> 3`] = `

Message:
> 1 | <div ID=btn CLASS="b&#116;n&#32;err"></div>
    |                    ^^^^^^^^^^^^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(5): <div ID=btn CLASS=\"b&#116;n&#32;err\"></div> 4`] = `

Message:
> 1 | <div ID=btn CLASS="b&#116;n&#32;err"></div>
    |                    ^^^^^^^^^^^^^^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(5): @layer btn {} 1`] = `

  1 | @layer btn {}

`;

exports[`name-replacements > invalid(5): @layer btn {} 2`] = `

Message:
> 1 | @layer btn {}
    |        ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(5): {\"btn-group\": {\"err\": 1}} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"btn-group": {"err": 1}}

`;

exports[`name-replacements > invalid(5): {\"btn-group\": {\"err\": 1}} 2`] = `

Message:
> 1 | {"btn-group": {"err": 1}}
    |  ^^^^^^^^^^^ The identifier \`btn-group\` should be named \`button-group\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(5): {\"btn-group\": {\"err\": 1}} 3`] = `

Message:
> 1 | {"btn-group": {"err": 1}}
    |                ^^^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(6): @media (--btn) {} 1`] = `

  1 | @media (--btn) {}

`;

exports[`name-replacements > invalid(6): @media (--btn) {} 2`] = `

Message:
> 1 | @media (--btn) {}
    |         ^^^^^ The identifier \`--btn\` should be named \`--button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(6): {\"b\\u0074n\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"b\\u0074n": 1}

`;

exports[`name-replacements > invalid(6): {\"b\\u0074n\": 1} 2`] = `

Message:
> 1 | {"b\\u0074n": 1}
    |  ^^^^^^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(7): a { container: btn / inline-size; } 1`] = `

  1 | a { container: btn / inline-size; }

`;

exports[`name-replacements > invalid(7): a { container: btn / inline-size; } 2`] = `

Message:
> 1 | a { container: btn / inline-size; }
    |                ^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(7): {\"btn\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"btn": 1}

`;

exports[`name-replacements > invalid(7): {\"btn\": 1} 2`] = `

Message:
> 1 | {"btn": 1}
    |  ^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(8): {\"btn-group\": {\"err\": 1}} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"btn-group": {"err": 1}}

`;

exports[`name-replacements > invalid(8): {\"btn-group\": {\"err\": 1}} 2`] = `

Message:
> 1 | {"btn-group": {"err": 1}}
    |  ^^^^^^^^^^^ The identifier \`btn-group\` should be named \`button-group\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(8): {\"btn-group\": {\"err\": 1}} 3`] = `

Message:
> 1 | {"btn-group": {"err": 1}}
    |                ^^^^^ The identifier \`err\` should be named \`error\`. A more descriptive name will do too.

`;

exports[`name-replacements > invalid(9): {\"b\\u0074n\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"b\\u0074n": 1}

`;

exports[`name-replacements > invalid(9): {\"b\\u0074n\": 1} 2`] = `

Message:
> 1 | {"b\\u0074n": 1}
    |  ^^^^^^^^^^ The identifier \`btn\` should be named \`button\`. A more descriptive name will do too.

`;
